# fixcompliance

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-test.in  requirements-test.txt  setup.cfg  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: bump.yml  fixcompliance.yml  publish.yml
fixcompliance/: __init__.py
fixcompliance/data/benchmark/aws/: aws_cis_1_5.json  aws_cis_2_0.json  aws_well_architected_framework_security_pillar.json  iso27001.json  nis-2.json
fixcompliance/data/benchmark/azure/: azure_cis_2_1.json
fixcompliance/data/checks/aws/: aws_apigateway.json  aws_cloudtrail.json  aws_cloudwatch.json  aws_config.json  aws_dynamodb.json  aws_ec2.json  aws_ecr.json  aws_ecs.json  aws_eks.json  aws_elasticache.json  aws_elb.json  aws_elbv2.json  aws_iam.json  aws_lambda.json  aws_rds.json  aws_redshift.json  aws_s3.json  aws_ssm.json
fixcompliance/data/checks/azure/: azure_compute.json  azure_cosmosdb.json  azure_entra.json  azure_keyvault.json  azure_monitor.json  azure_mysql.json  azure_network.json  azure_postgresql.json  azure_resource.json  azure_security.json  azure_sql_server.json  azure_storage.json  azure_web.json  microsoft_entra.json
test/: test_from_files.py
tools/: bump-version.py  get-version.py  make-requirements-in.py
