[project]
name = "fixcompliance"
version = "0.4.1"
authors = [{name="Some Engineering Inc."}]
description = "Fix Inventory Compliance Benchmarks and Checks"
license = { text="AGPLv3" }
requires-python = ">=3.9"
classifiers = [
    # Current project status
    "Development Status :: 5 - Production/Stable",
    # Audience
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    # License information
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    # Supported python versions
    "Programming Language :: Python :: 3.9",
    # Supported OS's
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    # Extra metadata
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
readme = {file="README.md", content-type="text/markdown"}

dependencies = [
    "setuptools",
]

[pyproject.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.scripts]
fixcompliance = "fixcompliance.__main__:main"

[project.urls]
Documentation = "https://inventory.fix.security"
Source = "https://github.com/someengineering/fix/tree/main/fixmetrics"

[build-system]
requires = ["setuptools>=67.8.0", "wheel>=0.40.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

