[project]
name = "fixcompliance"
version = "0.4.23"
authors = [
    { name = "Some Engineering Inc." },
]
description = "Fix Inventory Compliance Benchmarks and Checks"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Environment :: Console",
    "Natural Language :: English",
    "Topic :: Security",
    "Topic :: Utilities",
]
dependencies = []

[project.license]
text = "AGPLv3"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Documentation = "https://inventory.fix.security"
Source = "https://github.com/someengineering/fix/tree/main/fixmetrics"

[pyproject.optional-dependencies]
test = [
    "black",
    "coverage",
    "flake8",
    "hypothesis",
    "mypy",
    "pep8-naming",
    "pip-tools",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "fixinventoryclient>=2.0.0",
    "toml",
    "tox",
    "types-aiofiles",
]
dev = [
    "pip-tools",
    "tomli-w",
]

[tool.setuptools.package-data]
fixcompliance = [
    "py.typed",
]

[build-system]
requires = [
    "setuptools>=67.8.0",
    "wheel>=0.40.0",
    "build>=0.10.0",
]
build-backend = "setuptools.build_meta"
