[options]
packages = find:
include_package_data = True
zip_safe = False

[flake8]
max-line-length = 120
exclude = .git,.tox,__pycache__,.idea,.pytest_cache,docs
application-import-names = fixcore tests
ignore = N818, W503, E203

[mypy]
ignore_missing_imports = True

[coverage:run]
concurrency = multiprocessing
